--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <artifactId>thucydides-core</artifactId>
                 <version>0.9.275</version>
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
         </dependencies>
 
         <build>
