--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
             </dependency>
+            <dependency>
+                <groupId>net.thucydides</groupId>
+                <artifactId>thucydides-core</artifactId>
+                <version>0.9.275</version>
+            </dependency>
         </dependencies>
 
         <build>
