--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 <artifactId>thucydides-core</artifactId>
                 <version>0.9.275</version>
             </dependency>
+            <dependency>
+                <groupId>ru.sbtqa.tag.pagefactory</groupId>
+                <artifactId>page-factory-api</artifactId>
+                <version>1.0-beta.3</version>
+            </dependency>
         </dependencies>
 
         <build>
